cabal-version:      3.0
name:               diagram-tui
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             madsbangh
maintainer:         madsbangh@gmail.com
category:           Graphics
build-type:         Simple

common warnings
    ghc-options: -Wall

executable diagram-tui
    import:           warnings
    ghc-options: -threaded
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0,
                      brick ^>=2.10,
                      vty ^>=6.5,
                      microlens ^>=0.5,
                      containers ^>=0.7,
                      vector ^>=0.13.2.0,
                      text ^>=2.1.2,
                      -- Via Git
                      Hclip
    hs-source-dirs:   app
    default-language: GHC2024
